# offblast

./: .gitignore  .gitmodules  0.8.1_test_plan.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  ROADMAP.md  config-dist.json  gamefaqs_platforms.html  gamefaqs_postinfo.txt  main.c  missingcover.xcf  notes.txt  offblast.desktop  offblast.h  offblastDbFile.c  offblastDbFile.h  startoffblast.sh  wipeclean.sh
lists/: metal-jesus-top-10-ps2.json
shaders/: gradient.frag  gradient.vert  image.frag  text.frag  text.vert
tools/: createconfig.c  targets.c
